# echo-scribe-agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  livekit.toml  pyproject.toml
.planning/: STATE.md
.planning/quick/1-create-the-first-init-commit-for-the-new/: 1-SUMMARY.md
agents/: livekit_basic_example.py  livekit_general_agent.py
services/: daemon_client.py  docker_mcp_gateway.py  kokoro.compose.yml  local_stt_server.py  mcp_gateway.py  service_daemon.py
